// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm when active renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 40,
      "paddingTop": 80,
    }
  }
>
  <Title
    style={
      Object {
        "fontSize": 30,
        "paddingBottom": 20,
      }
    }
    text="Por favor, complete o seu perfil."
  />
  <MessageBox
    display="warn"
    messages={
      Array [
        "Uma senha forte, por favor.",
        null,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Defina uma senha"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Repita a senha"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <ProfilePictureField
    display="active"
    image={null}
    setImage={[Function]}
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Enviar"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`LoginForm when passwords match and the password is strong renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 40,
      "paddingTop": 80,
    }
  }
>
  <Title
    style={
      Object {
        "fontSize": 30,
        "paddingBottom": 20,
      }
    }
    text="Por favor, complete o seu perfil."
  />
  <MessageBox
    display="warn"
    messages={
      Array [
        "Uma senha forte, por favor.",
        null,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Defina uma senha"
      secureTextEntry={true}
      textContentType="password"
      value="s3cuRe!!!"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Repita a senha"
      secureTextEntry={true}
      textContentType="password"
      value="s3cuRe!!!"
    />
  </View>
  <ProfilePictureField
    display="active"
    image={null}
    setImage={[Function]}
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Enviar"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`LoginForm when passwords match and the password is weak renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 40,
      "paddingTop": 80,
    }
  }
>
  <Title
    style={
      Object {
        "fontSize": 30,
        "paddingBottom": 20,
      }
    }
    text="Por favor, complete o seu perfil."
  />
  <MessageBox
    display="warn"
    messages={
      Array [
        "Uma senha forte, por favor.",
        null,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Defina uma senha"
      secureTextEntry={true}
      textContentType="password"
      value="abc"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Repita a senha"
      secureTextEntry={true}
      textContentType="password"
      value="abc"
    />
  </View>
  <ProfilePictureField
    display="active"
    image={null}
    setImage={[Function]}
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Enviar"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`LoginForm when there's an error renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 40,
      "paddingTop": 80,
    }
  }
>
  <Title
    style={
      Object {
        "fontSize": 30,
        "paddingBottom": 20,
      }
    }
    text="Por favor, complete o seu perfil."
  />
  <MessageBox
    display="error"
    messages={
      Array [
        "Campo de senha vazio.",
        "Nenhuma imagem de perfil.",
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="error"
      onChangeText={[Function]}
      placeholder="Defina uma senha"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="error"
      onChangeText={[Function]}
      placeholder="Repita a senha"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <ProfilePictureField
    display="error"
    image={null}
    setImage={[Function]}
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="error"
      label="Enviar"
      onPress={[Function]}
    />
  </View>
</View>
`;
